--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ nav a:hover {
 	border-bottom: 3px solid #555;
 	box-sizing: border-box;
 	transition-property: color, border-bottom;
-	transition-duration: 1.5s;
+	transition-duration: 1s;
 	transition-timing-function: ease-out;
 }
 
@@ -143,7 +143,7 @@ p {
 	background-color: rgba(255, 255, 255, .9);
 	display: block;
 	box-sizing: border-box;
-	padding: 20px 50px 20px 50px;
+	padding: 10px 50px 10px 50px;
 	position: fixed;
 	width: 100%;
   -webkit-box-shadow: 0px 0px 4px 0px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
@@ -153,6 +153,16 @@ p {
 
 .thumbnail {
 	max-width: 100%;
+}
+
+.services-icons {
+	width: 100px;
+	height: 100px;
+	background: black;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+	margin: auto;
 }
 
 @media (max-width: 891px) {
