--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ media query for break points:
 
 
 body {
-	font-family: 'Oswald', Arial, sans-serif;
+	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 1em;
 	margin: 0;
 	box-sizing: border-box;
@@ -23,23 +23,23 @@ body {
 	background-size: contain;
 }
 
-nav a, nav a:visited {
+nav a, nav a:visited, nav a:active {
 	list-style: none;
 	display: inline-block;
 	float: right;
 	text-decoration: none;
-	font-size: 1.2em;
-	color: #708090;
+	font-size: 1.4em;
+	color: black;
 	box-sizing: border-box;
 	border-bottom: 3px solid rgba(0, 0, 0, 0);
 }
 
 nav a:hover {
-	color: #555;
+	color: #708090;
 	border-bottom: 3px solid #555;
 	box-sizing: border-box;
 	transition-property: color, border-bottom;
-	transition-duration: 1s;
+	transition-duration: 0.8s;
 	transition-timing-function: ease-out;
 }
 
@@ -57,33 +57,28 @@ nav ul li {
 	box-sizing: border-box;
 }
 
-.photo-banner {
+.banner {
 	box-sizing: border-box;
 	height: 400px;
-	background-image: url("../images/placeholder.jpg");
 	text-align: center;
 	font-size: 2rem;
 	padding-top: 8rem;
 	background-repeat: no-repeat;
-	  background-attachment: fixed;
-	  background-size: cover;
-	  color: white;
-	  background-color: gray;
+	background-attachment: fixed;
+	background-size: cover;
+	color: white;
+	background-color: #708090;
 	}
 
 .contact {
 	box-sizing: border-box;
-	height: auto;
-	
+	height: 300px;
 	text-align: center;
 	font-size: 1rem;
 	padding-top: 3rem;
-	background-repeat: no-repeat;
-	  background-attachment: fixed;
-	  background-size: cover;
-	  color: white;
-	  background-color: gray;
-	}
+	color: white;
+	background-color: #708090;
+}
 
 
 .three-column {
@@ -119,28 +114,25 @@ p {
 .content {
 	display: block;
 	text-align: center;
-	overflow: auto;
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
 
-.portfolio {
-	box-sizing: border-box;
-	width: 20%;
-	background: gray;
-	border: 1px solid black;
-	float: left;
-	height: 16rem;
-	overflow: none;
-	box-sizing: border-box;
-	border: 1px solid white;
-	background: white;
-	overflow: none;
+#portfolio-section {
+	margin: auto;
+	text-align: center;
+	height: auto;
 }
 
-.portfolio:hover {
-	opacity: 0.9;
+.portfolio {
+	width: 20%;
+	display: inline-block;
+	height: auto;
 	overflow: none;
+	box-sizing: border-box;
+	border: 1px solid gray;
+	margin: 20px;
+	background: white;
 }
 
 .header {
@@ -156,7 +148,11 @@ p {
 }
 
 .thumbnail {
-	max-width: 100%;
+	display: block;
+  	width: 100%;
+  	max-width: 100%;
+  	max-height: 100%;
+  	overflow: none;
 }
 
 .services-icons {
@@ -168,13 +164,36 @@ p {
 	border-radius: 50px;
 	margin: auto;
 	box-sizing: border-box;
+}
 
+.services-icons:hover {
+	transition-property: background-color;
+	transition-duration: 0.8s;
+	transition-timing-function: ease-out;
+	background-color: black;
 }
 
 .icons {
 	fill: white;
 	max-width: 100%;
 	max-height: 100%;
+}
+
+.h2 {
+	text-align: center;
+}
+
+.social-icons {
+	display: inline-block;
+	color: white;
+	padding: 20px;
+}
+
+.social-icons:hover {
+	transform: scale(1.2);
+	transition-duration: 0.5s;
+	transition-timing-function: ease-out;
+
 }
 
 @media (max-width: 891px) {
