--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ nav ul li {
 
 .contact {
 	box-sizing: border-box;
-	height: 300px;
+	height: auto;
 	text-align: center;
 	font-size: 1rem;
 	padding-top: 3rem;
@@ -195,6 +195,61 @@ p {
 	transition-timing-function: ease-out;
 
 }
+
+ .form{ 
+    max-width: 50%; 
+    min-width: 25%; 
+    border-width: 0px; 
+    border-color: #CCCCCC; 
+    border-radius: 4px; 
+    border-style: solid; 
+    color: #222222; 
+    font-size: 16px; 
+    margin: auto; 
+    padding: 20px; 
+} 
+.content{ 
+    margin: 0px; 
+} 
+.form label{ 
+    color: #222222; 
+    font-size: 14px; 
+    display: block; 
+} 
+.form input[type=radio], input[type=checkbox]{ 
+    margin: 10px; 
+    width: 13px; 
+} 
+.form div{ 
+    display: block; 
+} 
+.form input, form textarea, form select{ 
+    border-width: 0px; 
+    border-color: #666666; 
+    border-radius: 5px; 
+    padding: 3px; 
+    width: 100%; 
+} 
+
+.intro{ 
+    margin-bottom: 10px; 
+} 
+.clear{ 
+    clear: both; 
+} 
+.form textarea{ 
+    height: 151px; 
+    width: 100%; 
+} 
+.form input[type=submit]{ 
+    width: 20%; 
+    background-color: #fff; 
+    color: #222222; 
+} 
+.field{ 
+    margin-bottom: 30px; 
+} 
+
 
 @media (max-width: 891px) {
 /*
