--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@
 media query for break points:
 	-collapse nav into hamburger button
 	-make 3 column content stacked vertically 100% width
-	-resize portfolio thumbnails? make them stay square aspect ratio (equal width/height somehow?)
-
 */
 
 
@@ -67,7 +65,7 @@ nav ul li {
 	background-attachment: fixed;
 	background-size: cover;
 	color: white;
-	background-color: #708090;
+	background-image: url("../images/banner-bg.png");
 	}
 
 .contact {
@@ -77,9 +75,11 @@ nav ul li {
 	font-size: 1rem;
 	padding-top: 3rem;
 	color: white;
-	background-color: #708090;
+	background-image: url("../images/contact-bg.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
 }
-
 
 .three-column {
 	display: block;
@@ -133,6 +133,26 @@ p {
 	border: 1px solid gray;
 	margin: 20px;
 	background: white;
+	z-index: 1;
+	position: relative;
+}
+
+.portfolio .after {
+   	padding-top: 25%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    color: #FFF;
+    box-sizing: border-box;
+    transition: all 0.5s ease;
+}
+.portfolio:hover .after {
+    display: block;
+    background: rgba(0, 0, 0, .5);
+    transition: all 0.5s ease;
 }
 
 .header {
@@ -145,6 +165,7 @@ p {
   -webkit-box-shadow: 0px 0px 4px 0px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   -moz-box-shadow:    0px 0px 4px 0px #ccc;  /* Firefox 3.5 - 3.6 */
   box-shadow:         0px 0px 4px 0px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  z-index: 2;
 }
 
 .thumbnail {
