--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*PSEUDOCODE FOR CSS STILL TO COME
-media query for break points:
-	-collapse nav into hamburger button
-	-make 3 column content stacked vertically 100% width
-*/
-
-
 body {
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 1em;
@@ -79,6 +72,7 @@ nav ul li {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	position: top: -50px;
 }
 
 .three-column {
@@ -163,9 +157,9 @@ p {
 	padding: 10px 50px 10px 50px;
 	position: fixed;
 	width: 100%;
-  -webkit-box-shadow: 0px 0px 4px 0px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    0px 0px 4px 0px #ccc;  /* Firefox 3.5 - 3.6 */
-  box-shadow:         0px 0px 4px 0px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  -webkit-box-shadow: 0 0 4px 0 #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    0 0 4px 0 #ccc;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         0 0 4px 0 #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
   z-index: 2;
 }
 
@@ -177,7 +171,7 @@ p {
   	overflow: none;
 }
 
-.services-icons {
+.services-circles {
 	width: 100px;
 	height: 100px;
 	background: #708090;
@@ -190,7 +184,7 @@ p {
 	padding-bottom: 5%;
 }
 
-.services-icons:hover {
+.services-circles:hover {
 	transition-property: background-color;
 	transition-duration: 0.8s;
 	transition-timing-function: ease-out;
@@ -200,6 +194,8 @@ p {
 .icons {
 	max-width: 80%;
 	max-height: 80%;
+	width: auto;
+	height: auto;
 }
 
 .h2 {
@@ -222,7 +218,7 @@ p {
  .form{ 
     max-width: 50%; 
     min-width: 25%; 
-    border-width: 0px; 
+    border-width: 0; 
     border-color: #CCCCCC; 
     border-radius: 4px; 
     border-style: solid; 
@@ -334,5 +330,16 @@ input, textarea {
 	.thumbnail {
 		display: block;
 		width: auto;
+	}
+
+	.portfolio {
+		width: auto;
+		height: auto;
+		margin: auto;
+	}
+
+	.logo {
+		width: 75%;
+		height: 75%;
 	}
 }
