--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 1em;
+	font-size: 16px;
 	margin: 0;
 	box-sizing: border-box;
 }
@@ -54,6 +54,8 @@ nav ul li {
 	text-align: center;
 	font-size: 2rem;
 	padding-top: 8rem;
+	padding-left: 10%;
+	padding-right: 10%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
@@ -66,13 +68,12 @@ nav ul li {
 	height: auto;
 	text-align: center;
 	font-size: 1rem;
-	padding-top: 3rem;
+	padding: 5rem 0 5rem 0;
 	color: white;
 	background-image: url("../images/contact-bg4.png");
 	background-repeat: no-repeat;
-	background-attachment: fixed;
 	background-size: cover;
-	position: top: -50px;
+	background-position: 50px 0 0 0;
 }
 
 .three-column {
@@ -172,16 +173,22 @@ p {
 }
 
 .services-circles {
-	width: 100px;
-	height: 100px;
+	/*width: 100px;
+	height: 100px;*/
+	width: 7rem;
+	height: 7rem;
+	-moz-border-radius: 3.5rem;
+	-webkit-border-radius: 3.5rem;
+	border-radius: 3.5rem;
 	background: #708090;
-	-moz-border-radius: 50px;
+	margin: auto;
+	/*-moz-border-radius: 50px;
 	-webkit-border-radius: 50px;
 	border-radius: 50px;
-	margin: auto;
+	margin: auto;*/
 	box-sizing: border-box;
-	padding-top: 8%;
-	padding-bottom: 5%;
+	/*padding-top: 8%;
+	padding-bottom: 5%;*/
 }
 
 .services-circles:hover {
@@ -192,10 +199,13 @@ p {
 }
 
 .icons {
-	max-width: 80%;
-	max-height: 80%;
+	max-width: 50%;
+	max-height: 50%;
+	margin: auto;
 	width: auto;
 	height: auto;
+	position: relative;
+	top: 25%;
 }
 
 .h2 {
@@ -315,6 +325,18 @@ input, textarea {
 	.navigation {
 		width: 50%;
 	}
+
+	.thumbnail {
+		display: block;
+		width: auto;
+	}
+
+	.portfolio {
+		width: auto;
+		height: auto;
+		margin: 1rem;
+	}
+
 }
 
 @media (max-width: 700px) {
@@ -327,19 +349,18 @@ input, textarea {
 	display: none;
 	}
 
-	.thumbnail {
-		display: block;
-		width: auto;
-	}
-
-	.portfolio {
-		width: auto;
-		height: auto;
-		margin: auto;
-	}
-
 	.logo {
 		width: 75%;
 		height: 75%;
+	}
+
+	.social-icons {
+		display: block;
+		padding: 0;
+	}
+
+	.banner {
+		font-size: 1.5rem;
+		height: 350px;
 	}
 }
