--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ p {
     transition: all 0.5s ease;
 }
 
-.header {
+header {
 	background-color: rgba(255, 255, 255, .9);
 	display: block;
 	box-sizing: border-box;
