--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 	background-size: contain;
 	padding-top: 20px;
 	font-size: 1.8rem;
-	text-weight: 700;
+	font-weight: 700;
 	font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
 	border: 1px solid #00ccff;
 	border-radius: 50%;
@@ -170,14 +170,6 @@ footer {
 	transition-timing-function: ease-out;
 }
 
-.headshot {
-	float: left;
-	background-color: #111;
-	height: 400px;
-	width: 33%;
-	margin: -2rem 4rem 0 0;
-}
-
 #portfolio-section {
 	margin: auto;
 	text-align: center;
@@ -241,41 +233,6 @@ header {
   	overflow: none;
 }
 
-.services-circles {
-	/*width: 100px;
-	height: 100px;*/
-	width: 7rem;
-	height: 7rem;
-	-moz-border-radius: 3.5rem;
-	-webkit-border-radius: 3.5rem;
-	border-radius: 3.5rem;
-	background: #708090;
-	margin: auto;
-	/*-moz-border-radius: 50px;
-	-webkit-border-radius: 50px;
-	border-radius: 50px;
-	margin: auto;*/
-	box-sizing: border-box;
-	/*padding-top: 8%;
-	padding-bottom: 5%;*/
-}
-
-.services-circles:hover {
-	transition-property: background-color;
-	transition-duration: 0.8s;
-	transition-timing-function: ease-out;
-	background-color: black;
-}
-
-.icons {
-	max-width: 50%;
-	max-height: 50%;
-	margin: auto;
-	width: auto;
-	height: auto;
-	position: relative;
-	top: 25%;
-}
 
 h1 {
 	margin-top: 8rem;
@@ -302,64 +259,8 @@ h2 {
 	transition-timing-function: ease-out;
 }
 
- .form{ 
-    max-width: 50%; 
-    min-width: 25%; 
-    border-width: 0; 
-    border-color: #CCCCCC; 
-    border-radius: 4px; 
-    border-style: solid; 
-    color: #222222; 
-    font-size: 16px; 
-    margin: auto; 
-    padding: 20px; 
-} 
-
-.form label{ 
-    color: #222222; 
-    font-size: 14px; 
-    display: block; 
-} 
-.form input[type=radio], input[type=checkbox]{ 
-    margin: 10px; 
-    width: 13px; 
-} 
-.form div{ 
-    display: block; 
-} 
-.form input, form textarea, form select{ 
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
-    border-radius: 5px;
-    color: white;
-    padding: 3px; 
-    width: 100%; 
-} 
-
-.intro{ 
-    margin-bottom: 10px; 
-} 
 .clear{ 
     clear: both; 
-} 
-.form textarea{ 
-    height: 151px; 
-    width: 100%; 
-} 
-.form input[type=submit]{ 
-    width: 20%; 
-    background-color: #fff; 
-    color: #222222; 
-} 
-
-input, textarea {
-	background-color: #708090;
-	border-top: 1px solid white;
-	border-bottom: 1px solid white;
-}
-
-.field{ 
-    margin-bottom: 30px; 
 } 
 
 .hamburger {
@@ -372,37 +273,6 @@ input, textarea {
 }
 
 @media (max-width: 1030px) {
-	/*.hamburger {
-	color: black;
-	text-decoration: none;
-}
-
-	.hamburger:hover {
-		border-bottom: none;
-	}
-
-	.desktop-only {
-	display: none;
-	}
-
-	.mobile-only {
-	display: inline-block;
-	float: right;
-	}
-
-	nav ul li {
-	width: 100%;
-	text-align: right;
-	} 
-
-	.menu {
-		width: 20%;
-	}
-
-	/*.navigation {
-		width: 50%;
-	}*/
-
 	.thumbnail {
 		display: block;
 		width: auto;
@@ -449,12 +319,6 @@ input, textarea {
 		width: 100%;
 		padding: 20px 60px 20px 60px;
 	}
-
-
-	/*.logo {
-		width: 75%;
-		height: 75%;
-	}*/
 
 	.social-icons {
 		display: block;
